--- a/index.html
+++ b/index.html
@@ -705,9 +705,10 @@
             <p>Save 20+ hours per week and boost your revenue by up to 300% with our all-in-one digital marketing automation solution.</p>
 
             <div class="hero-images">
-                <img src="images/Capture d'écran 2025-03-01 143428.png" alt="WooCommerce Google Sheets Integration" class="hero-image">
-                <img src="images/Capture d'écran 2025-03-01 143353.png" alt="Facebook Groups Autoposter" class="hero-image">
-                <img src="images/Capture d'écran 2025-03-01 143316.png" alt="Bulk WhatsApp Sender" class="hero-image">
+                <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTAmgK18-InAAEM-3S6SnvVCIEuV4bpzt-Cj6h4ci3_HfKJPYTi" alt="WooCommerce Google Sheets Integration" class="hero-image">
+                <img src="https://s3.ap-south-1.amazonaws.com/blooup/uploads/images/202111/img_x300_619aa9cf39c826-89006069-38384703.jpg " alt="Facebook Groups Autoposter" class="hero-image">
+                <img src="https://5.imimg.com/data5/SELLER/Default/2023/2/VW/MS/UG/118614775/bulk-whatsapp-marketing-software-with-licience-genrator-500x500.jpg
+                    " alt="Bulk WhatsApp Sender" class="hero-image">
             </div>
 
             <a href="#pricing" class="btn btn-accent">Get Instant Access Now</a>
@@ -777,7 +778,7 @@
             <div class="product-card">
                 <div class="product-content">
                     <div class="product-img-container">
-                        <img src="images/Capture d'écran 2025-03-01 143428.png0" alt="WooCommerce Google Sheets Integration" class="product-img">
+                        <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTAmgK18-InAAEM-3S6SnvVCIEuV4bpzt-Cj6h4ci3_HfKJPYTi" alt="WooCommerce Google Sheets Integration" class="product-img">
                     </div>
                     <div class="product-details">
                         <h3 class="product-title">WooCommerce Google Sheets Integration</h3>
@@ -801,7 +802,7 @@
             <div class="product-card">
                 <div class="product-content">
                     <div class="product-img-container">
-                        <img src="images/Capture d'écran 2025-03-01 143353.png" alt="Facebook Groups Autoposter" class="product-img">
+                        <img src="https://s3.ap-south-1.amazonaws.com/blooup/uploads/images/202111/img_x300_619aa9cf39c826-89006069-38384703.jpg " alt="Facebook Groups Autoposter" class="product-img">
                     </div>
                     <div class="product-details">
                         <h3 class="product-title">Facebook Groups Autoposter</h3>
@@ -825,7 +826,8 @@
             <div class="product-card">
                 <div class="product-content">
                     <div class="product-img-container">
-                        <img src="images/Capture d'écran 2025-03-01 143316.png" alt="Bulk WhatsApp Sender" class="product-img">
+                        <img src="https://5.imimg.com/data5/SELLER/Default/2023/2/VW/MS/UG/118614775/bulk-whatsapp-marketing-software-with-licience-genrator-500x500.jpg
+                            " alt="Bulk WhatsApp Sender" class="product-img">
                     </div>
                     <div class="product-details">
                         <h3 class="product-title">Bulk WhatsApp Sender</h3>
