--- a/index.html
+++ b/index.html
@@ -1,152 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Marketing Automation Suite | Triple Your Sales While You Sleep</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <meta name="description" content="مجفف ملابس نصف أوتوماتيكي بحوض واحد، مثالي لتجفيف الملابس بسرعة وكفاءة في المساحات الصغيرة.">
+    <title>مجفف الملابس نصف الأوتوماتيكي - جفف ملابسك بسرعة وكفاءة</title>
     <style>
-        :root {
-            /* Colors */
-            --primary-blue-start: #007BFF;
-            --primary-blue-end: #0056b3;
-            --cta-red: #E63946;
-            --cta-red-hover: #FF6B6B;
-            --white: #FFFFFF;
-            --light-gray: #F2F2F2;
-            --dark-gray: #333;
-            --medium-gray: #666;
-
-            /* Typography */
-            --font-family: 'Poppins', sans-serif;
-            --headline-size: 36px;
-            --subheadline-size: 18px;
-            --body-size: 16px;
-            --cta-size: 18px;
-            --feature-headline-size: 24px;
-        }
-
-        * {
+        body {
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
+            background-color: #f4f4f4;
+            color: #333;
         }
-
-        body {
-            font-family: var(--font-family);
-            line-height: 1.6;
-            color: var(--dark-gray);
-            background-color: var(--white);
-        }
-
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 0 20px;
+            padding: 20px;
         }
-
-        /* Hero Section */
-        .hero {
-            background: linear-gradient(to bottom, var(--primary-blue-start), var(--primary-blue-end));
-            padding: 100px 0;
+        h1 {
             text-align: center;
-        }
-
-        .headline {
-            font-size: var(--headline-size);
-            font-weight: 700;
-            line-height: 1.2;
-            color: var(--white);
+            color: #007BFF;
             margin-bottom: 20px;
         }
-
-        .subheadline {
-            font-size: var(--subheadline-size);
-            font-weight: 400;
-            line-height: 1.5;
-            color: var(--white);
-            margin-bottom: 40px;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
+        .product-images {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin-bottom: 20px;
         }
-
-        .cta-button {
-            background: var(--cta-red);
-            color: var(--white);
-            padding: 12px 24px;
-            border-radius: 4px;
-            text-decoration: none;
-            font-size: var(--cta-size);
-            font-weight: 700;
-            text-transform: uppercase;
-            transition: background 0.3s ease;
-            display: inline-block;
+        .product-images img {
+            width: 300px;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-
-        .cta-button:hover {
-            background: var(--cta-red-hover);
+        .description {
+            text-align: center;
+            font-size: 18px;
+            margin-bottom: 30px;
         }
-
-        /* Feature Section */
-        .features {
-            background: var(--white);
-            padding: 60px 0;
+        .benefits {
+            margin-bottom: 30px;
         }
-
-        .feature {
-            margin-bottom: 40px;
-            max-width: 350px;
+        .benefits h2 {
+            text-align: center;
+            color: #007BFF;
+            margin-bottom: 15px;
         }
-
-        .feature-headline {
-            font-size: var(--feature-headline-size);
-            font-weight: 700;
-            line-height: 1.2;
-            color: var(--dark-gray);
+        .benefits ul {
+            list-style-type: none;
+            padding: 0;
+            text-align: center;
+        }
+        .benefits li {
+            font-size: 18px;
             margin-bottom: 10px;
         }
-
-        .feature-text {
-            font-size: var(--body-size);
-            font-weight: 400;
-            line-height: 1.5;
-            color: var(--medium-gray);
-        }
-
-        /* Utility Classes */
-        .text-center {
+        .cta {
             text-align: center;
+            margin-bottom: 30px;
         }
-
-        .mb-20 {
-            margin-bottom: 20px;
+        .cta button {
+            background-color: #28A745;
+            color: white;
+            padding: 15px 30px;
+            font-size: 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
         }
-
-        .mb-40 {
-            margin-bottom: 40px;
+        .cta button:hover {
+            background-color: #218838;
         }
     </style>
 </head>
 <body>
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="container">
-            <h1 class="headline">Triple Your Sales Today</h1>
-            <p class="subheadline">Boost conversions with our automation tools.</p>
-            <a href="#" class="cta-button">Get Started</a>
-        </div>
-    </section>
+    <div class="container">
+        <h1>جفف ملابسك بسرعة وكفاءة مع مجفف الملابس نصف الأوتوماتيكي!</h1>
 
-    <!-- Feature Section -->
-    <section class="features">
-        <div class="container">
-            <div class="feature">
-                <h2 class="feature-headline">Feature One</h2>
-                <p class="feature-text">Description of feature one goes here.</p>
-            </div>
-            <!-- Add more features as needed -->
+        <div class="product-images">
+            <img src="https://example.com/front-view.jpg" alt="مجفف الملابس - منظر أمامي">
+            <img src="https://example.com/side-view.jpg" alt="مجفف الملابس - منظر جانبي">
+            <img src="https://example.com/in-use.jpg" alt="مجفف الملابس - في الاستخدام">
         </div>
-    </section>
+
+        <div class="description">
+            <p>تم تصميم مجفف الملابس نصف الأوتوماتيكي لتجفيف الملابس بسرعة وكفاءة. بفضل تصميمه بحوض واحد، يناسب المساحات الصغيرة ويمكنه استيعاب ما يصل إلى 5.6 كجم من الغسيل. كل ما عليك هو وضع الملابس، ضبط المؤقت، وترك المجفف يقوم بالمهمة.</p>
+        </div>
+
+        <div class="benefits">
+            <h2>لماذا تختار مجفف الملابس نصف الأوتوماتيكي؟</h2>
+            <ul>
+                <li>توفير الوقت: يجفف الملابس بسرعة أكبر من الطرق التقليدية.</li>
+                <li>كفاءة في استهلاك الطاقة: يقلل من تكاليف الكهرباء.</li>
+                <li>محمول ومدمج: يسهل تخزينه ونقله.</li>
+            </ul>
+        </div>
+
+        <div class="cta">
+            <button>اطلب الآن واستمتع بتجفيف أسرع!</button>
+        </div>
+    </div>
 </body>
 </html>
