--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         <h1>جفف ملابسك بسرعة وكفاءة مع مجفف الملابس نصف الأوتوماتيكي!</h1>
 
         <div class="product-images">
-            <img src="https://example.com/front-view.jpg" alt="مجفف الملابس - منظر أمامي">
-            <img src="https://example.com/side-view.jpg" alt="مجفف الملابس - منظر جانبي">
-            <img src="https://example.com/in-use.jpg" alt="مجفف الملابس - في الاستخدام">
+            <img src="https://s.alicdn.com/@sc04/kf/H6b11b0d2399e4fdb9be0ff35b1fa1ced1.jpg_720x720q50.jpg" alt="مجفف الملابس - منظر أمامي">
+            <img src="https://s.alicdn.com/@sc04/kf/H2ac7355067ef471ea390937ad81881a6S.jpg_720x720q50.jpg" alt="مجفف الملابس - منظر جانبي">
+            <img src="https://s.alicdn.com/@sc04/kf/Hfaf973fe35e24af9aa5bcf21e6399750Q.jpg_720x720q50.jpg" alt="مجفف الملابس - في الاستخدام">
         </div>
 
         <div class="description">
