--- a/index.html
+++ b/index.html
@@ -1290,7 +1290,11 @@
                     <img src="https://s3.ap-south-1.amazonaws.com/blooup/uploads/images/202111/img_x300_619aa9cf39c826-89006069-38384703.jpg" alt="Facebook Groups Autoposter" class="hero-image">
                     <img src="https://5.imimg.com/data5/SELLER/Default/2023/2/VW/MS/UG/118614775/bulk-whatsapp-marketing-software-with-licience-genrator-500x500.jpg" alt="Bulk WhatsApp Sender" class="hero-image">
                 </div>
-                <a href="https://gumroad.com/l/DigitalMarketingPowerBundle" class="btn btn-accent gumroad-button">Get Instant Access Now</a>
+                <a href="https://gumroad.com/checkout?_gl=1*5mc84k*_ga*NzgyMTMxOTU3LjE3NDA3ODI4ODI.*_ga_6LJN6D94N6*MTc0MTIxOTAwMS4xMC4xLjE3NDEyMjA0NDMuMC4wLjA." 
+   class="btn btn-accent gumroad-button" 
+   data-gumroad-overlay-require="true">
+   Get Instant Access Now
+</a>
                 <div class="timer-container">
                     <div class="timer-label">Limited Time Offer Ends In:</div>
                     <div class="timer">
