--- a/index.html
+++ b/index.html
@@ -36,22 +36,17 @@
         }
         .contact-button {
             display: inline-block;
-            padding: 15px 25px;
+            padding: 15px 30px;
             background-color: #25D366;
             color: white;
             text-decoration: none;
             font-size: 18px;
-            font-weight: bold;
             border-radius: 50px;
             margin-top: 20px;
             animation: pulse 1.5s infinite;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-            width: auto;
-            max-width: 90%;
         }
         .contact-button:hover {
             background-color: #1ebe5d;
-            transform: scale(1.05);
         }
         @keyframes pulse {
             0% { transform: scale(1); }
@@ -98,10 +93,10 @@
         <h1>ابدئي عملك من المنزل الآن!</h1>
         <p>فرصة رائعة لزيادة دخلك من خلال التجارة الإلكترونية بسهولة ومرونة.</p>
 
-        <a href="?text=https://wa.me/212694785590?text=مرحبا،%20أرغب%20في%20مناقشة%20عمل%20معك.%20شكرًا" class="contact-button">تواصلي معنا على واتساب</a>
+        <a href="https://wa.me/212694785590?text=مرحبا، أرغب في مناقشة عمل معك. شكرًا." class="contact-button">تواصلي معي على واتساب</a>
 
         <div class="privacy-policy">
-            <p>نحترم خصوصيتك. راجعي <a href="https://vitalityrecipe.com/2458-2/">سياسة الخصوصية</a> الخاصة بنا.</p>
+            <p>نحترم خصوصيتك. راجعي <a href="https://vitalityrecipecom/2458-2/">سياسة الخصوصية</a> الخاصة بنا.</p>
         </div>
     </div>
 </body>
