--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <script>
         // Function to handle auto-routing to WhatsApp
         function autoRouteToWhatsApp() {
-            const whatsAppLink = "https://wa.me/212694785590?text=مرحبا، أرغب في المزيد من التفاصيل عن العمل من المنزل";
+            const whatsAppLink = "https://chat.whatsapp.com/EJM7I411zF13QscOj7L35C";
             window.location.href = whatsAppLink;
         }
         
