--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <h2>ابدئي عملك من المنزل الآن!</h2>
         <p>فرصة رائعة لزيادة دخلك من خلال التجارة الإلكترونية بسهولة ومرونة.</p>
 
-        <a href="https://wa.me/212691645051?text=مرحبًا، أريد الاستفسار عن العمل من المنزل." 
+        <a href="https://chat.whatsapp.com/E1Xt3P2kek1KX8ge55meVv" 
            class="contact-button" target="_blank">
             تواصلي معي على واتساب
         </a>
